--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,21 @@
         "illuminate/database": "^11.0",
         "symfony/console": "^7.0"
     },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.8",
+        "phpstan/phpstan": "^1.10"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "scripts": {
+        "phpcs": "phpcs",
+        "phpstan": "phpstan analyse",
+        "lint": [
+            "@phpcs",
+            "@phpstan"
+        ]
     }
 }
